
[TestBasicTokens - 1]
lexer.TokenList{
    Index:  0,
    Tokens: {
        {Token:"<", TokenContent:""},
        {Token:"name", TokenContent:"a"},
        {Token:">", TokenContent:""},
        {Token:"data", TokenContent:"Tag"},
        {Token:"</", TokenContent:""},
        {Token:"name", TokenContent:"a"},
        {Token:">", TokenContent:""},
    },
}
---

[TestNesting - 1]
lexer.TokenList{
    Index:  0,
    Tokens: {
        {Token:"<", TokenContent:""},
        {Token:"name", TokenContent:"hello"},
        {Token:">", TokenContent:""},
        {Token:"<", TokenContent:""},
        {Token:"name", TokenContent:"world"},
        {Token:">", TokenContent:""},
        {Token:"data", TokenContent:"Something And Something"},
        {Token:"</", TokenContent:""},
        {Token:"name", TokenContent:"world"},
        {Token:">", TokenContent:""},
        {Token:"</", TokenContent:""},
        {Token:"name", TokenContent:"hello"},
        {Token:">", TokenContent:""},
    },
}
---

[TestMultipleLines - 1]
lexer.TokenList{
    Index:  0,
    Tokens: {
        {Token:"<", TokenContent:""},
        {Token:"name", TokenContent:"hello"},
        {Token:">", TokenContent:""},
        {Token:"<", TokenContent:""},
        {Token:"name", TokenContent:"world"},
        {Token:">", TokenContent:""},
        {Token:"data", TokenContent:"Something here "},
        {Token:"<", TokenContent:""},
        {Token:"name", TokenContent:"a"},
        {Token:">", TokenContent:""},
        {Token:"</", TokenContent:""},
        {Token:"name", TokenContent:"a"},
        {Token:">", TokenContent:""},
        {Token:"data", TokenContent:"??????          \n\n\n\n\n    dsnmkadsmakkmlsdakmldsa\n\n      "},
        {Token:"</", TokenContent:""},
        {Token:"name", TokenContent:"world"},
        {Token:">", TokenContent:""},
        {Token:"</", TokenContent:""},
        {Token:"name", TokenContent:"hello"},
        {Token:">", TokenContent:""},
    },
}
---

[TestAttributes - 1]
lexer.TokenList{
    Index:  0,
    Tokens: {
        {Token:"<", TokenContent:""},
        {Token:"name", TokenContent:"a"},
        {Token:"name", TokenContent:"hello"},
        {Token:"=", TokenContent:""},
        {Token:"string", TokenContent:"world"},
        {Token:">", TokenContent:""},
    },
}
---
